# mnemonic-protocol

./: .gitignore  .gitmodules  CLAUDE.md  IDENTITY.md  README.md  USER.md
.specify/: init-options.json
data/: example-queries.jsonl  mvp_results_4bit.json  mvp_results_8bit.json  mvp_results_provider_switch_8bit.json  nomic_multidomain_8bit.json
data/results/: corpus_10k.jsonl  corpus_1k.jsonl  queries_1k.jsonl  results_openai_10k_4bit.json
docs/: ADR-020-artifact-schema-registry.md  ADR.md  ARCHITECTURE.md  BLOCKERS.md  CRITICAL_REVIEW.md  DECENTRALIZED_RAG_LANDSCAPE.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_STATUS.md  MCP_SERVER_BACKEND_FEATURES_COMPARISON.md  MVP_SPEC.md  MVP_VERIFICATION.md  PROJECT_STATE.md  README.md  WHITEPAPER.md
docs/adr/: ADR.md
docs/diagrams/: mcp-data-flows.mmd  mcp-layers.mmd  mcp-server-rs-data-flows.mmd  mcp-server-rs-layers.mmd
docs/legacy/: ARCHITECTURE.full.md  ARCHITECTURE.md  BLOCKERS.full.md  BLOCKERS.md  PROJECT_STATE.full.md  (+3 more)
mcp/: .gitignore  README.md
mcp-server/: .env.example  .gitignore  README.md  requirements.txt
mcp-server-rs/: .env.example  Cargo.toml  README.md
mcp-server-rs/benches/: decompress.rs
mcp-server-rs/src/: arweave.rs  compress.rs  config.rs  db.rs  embed.rs  identity.rs  main.rs  mcp.rs  payment.rs  pricing.rs  solana.rs  tools.rs
mcp-server-rs/src/codec/: hash.rs  mod.rs  schema.rs  sign.rs
mcp-server-rs/tests/: proptest_canonical.rs
memory/: 2026-03-29.md
research/: WHITEPAPER.md  report.md
src/turbo-quant-agent-memory/: .gitignore  ADR.md  ARCHITECTURE.md  ARWEAVE_PRICING_VALIDATION.md  BLOCKERS.md  DEMO_SPEC.md  MVP_SPEC.md  MVP_VERIFICATION.md  PROJECT_STATE.md  README.md  SCHEMA.md  TURBOQUANT_DEEP_ANALYSIS.md  WEB_RESEARCH_TRUSTLESS_RAG.md  WHITEPAPER.md  agent_loop.py  arweave_pricing_validation.json  bench_latency.py  condensed-principles.md  example-memories.jsonl  example-results.json  fastdot.c  generate_real_corpus.py  latest-clade-work.txt  mvp_results_10k_4bit.json  mvp_results_10k_8bit.json  mvp_results_multidomain_4bit.json  mvp_results_multidomain_8bit.json  mvp_results_persist_4bit.json  mvp_results_provider_switch_4bit.json  mvp_verify.py  nomic_persist_8bit.json  nomic_results_1k_4bit.json  nomic_results_1k_8bit.json  nomic_results_5k_4bit.json  nomic_results_5k_8bit.json  pseudocode.py  pyproject.toml  requirements.txt  validate_arweave_pricing.mjs
src/turbo-quant-agent-memory/.specify/memory/: constitution.md
src/turbo-quant-agent-memory/data/: queries_10k.jsonl  results_openai_10k_8bit.json  results_openai_1k_4bit.json  results_openai_1k_8bit.json  snapshot_1k_8bit.commitment.json
src/turbo-quant-agent-memory/mnemonic/: __init__.py  __main__.py  benchmark.py  cache.py  embedders.py  indexer.py  models.py
src/turbo-quant-agent-memory/onchain/: encrypt.mjs  package.json
src/turbo-quant-agent-memory/tests/: run_tests.py  test_cache.py  test_embedders.py  test_models.py  test_quantizer.py  test_retriever.py  test_store.py
v0/mnemonic-verify/: .env.example  .gitignore  Cargo.toml  README.md
v0/mnemonic-verify/keys/: arlocal-test-wallet.jwk
v0/mnemonic-verify/scripts/: run-tests.sh  start-local-nodes.sh  verify-cli.sh
v0/mnemonic-verify/scripts/lib/: local-infra.sh  start-local-nodes.sh
v0/mnemonic-verify/src/: arweave.rs  lib.rs  main.rs  receipt.rs  solana.rs  verify.rs
v0/mnemonic-verify/tests/: integration_tamper.rs
v1/: .env.example  .tool-versions
(+129 files in other folders)
