[package]
name = "mnemonic-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (Arweave REST API)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Encoding
base64 = "0.22"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Solana
solana-sdk = "2.2"
solana-client = "2.2"
solana-transaction-status = "2.2"
spl-memo = "6"

# Embeddings — fastembed (ONNX) is optional; default is deterministic hash embedder
fastembed = { version = "4", optional = true }

# Binary serialization (for Solana tx decoding)
bincode = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Config
dotenvy = "0.15"

# Random (for arweave tx construction)
rand = "0.8"

# Base58 (for Solana instruction data decoding)
bs58 = "0.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
